@@ -1,3 +1,7 @@
+2011-01-20
+* add option to switch between absolute and relative reporting of paths, to
+make unpacked files easier to find in /tmp after a scan
+
 2011-01-17
 * add configuration for BusyBox 1.18.2
 * bump version number to 4.0
